<resources>
    <string name="app_name">bored</string>
    <string name="action_settings">Settings</string>

    <!-- Common strings -->
    <string name="disable_option_title">I don\'t care</string>
    <string name="summary_not_set">Not set</string>
    <string name="request_failed">Failed to load activity</string>
    <string name="no_activity">There is not activity for your preferences</string>

    <!-- Strings used for fragments for navigation -->
    <string name="activity_empty">bored?</string>
    <string name="get_activity">bored</string>
    <string name="get_another_activity">still bored</string>
    <string name="button_link_text">Tell me more</string>

    <!-- Preference common -->
    <string name="title_activity_settings">boring settings</string>

    <!-- Preference Type -->
    <string name="type_header">What type of activity do you want to do?</string>
    <string name="type_title">Select type</string>

    <!-- Preference Participants -->
    <string name="participants_header">How many people should be involved?</string>
    <string name="participants_title">Input number of people</string>

    <!-- Preference Price -->
    <string name="price_header">How much can it cost?</string>
    <string name="price_title">Select maximum</string>
    <string name="price_summary_highest">Money is not an issue</string>
    <string name="price_summary_high">As long as it is entertaining</string>
    <string name="price_summary_middle">I don\'t mind spending a little</string>
    <string name="price_summary_low">Make it cheap</string>
    <string name="price_summary_lowest">Free</string>

    <!-- Preference Accessibility -->
    <string name="accessibility_header">How easy should it be done?</string>
    <string name="accessibility_title">How easy should it be done?</string>
    <string name="accessibility_summary_highest">Bring it on!</string>
    <string name="accessibility_summary_high">Give me a challenge</string>
    <string name="accessibility_summary_middle">Something in the middle</string>
    <string name="accessibility_summary_low">Feeling lazy</string>
    <string name="accessibility_summary_lowest">I don\'t really want to do anything</string>
</resources>